--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.3.0",
     "vuetify": "^3.5.9"
   },
   "devDependencies": {
